--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/quicksand": "^5.2.5",
+    "@headlessui/react": "^2.2.0",
     "@mui/material": "^6.4.2",
     "@react-three/drei": "^9.121.5",
     "@react-three/fiber": "^8.17.14",
+    "@tailwindcss/vite": "^4.0.14",
     "@types/three": "^0.173.0",
-    "framer-motion": "^12.4.3",
+    "framer-motion": "^12.5.0",
     "motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.3",
+    "react-router-dom": "^7.3.0",
+    "tailwindcss": "^4.0.14",
     "three": "^0.172.0"
   },
   "devDependencies": {
