--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/fiber": "^8.17.14",
     "@tailwindcss/vite": "^4.0.14",
     "@types/three": "^0.173.0",
+    "express": "^4.21.2",
     "framer-motion": "^12.5.0",
     "motion": "^12.0.6",
     "react": "^18.3.1",
