--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/quicksand": "^5.2.5",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "@mui/material": "^6.4.2",
     "@react-three/drei": "^9.121.5",
@@ -20,6 +23,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "@types/three": "^0.173.0",
     "express": "^4.21.2",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^12.5.0",
     "motion": "^12.0.6",
     "react": "^18.3.1",
